[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['prochain-runtime/std']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'prochain-runtime-wasm'
version = '1.0.0'
[dependencies.prochain-runtime]
default-features = false
path = '..'
