[package]
name = "substrate-test-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-client = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-client-db = { version = "2.0.0", features = ["test-helpers"], git = "https://github.com/ProChain/substrate.git" }
sp-consensus = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
futures = "0.3.1"
hash-db = "0.15.2"
sp-keyring = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-state-machine = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
