[package]
name = "substrate-test-runtime"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
sp-application-crypto = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-consensus-aura = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-consensus-babe = { version = "0.8", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-block-builder = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
cfg-if = "0.1.10"
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-inherents = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-keyring = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
log = { version = "0.4.8", optional = true }
memory-db = { version = "0.15.2", default-features = false }
sp-offchain = { git = "https://github.com/ProChain/substrate.git", default-features = false}
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-runtime-interface = { git = "https://github.com/ProChain/substrate.git", default-features = false}
sp-io = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
pallet-babe = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sc-client = { version = "2.0.0", optional = true, git = "https://github.com/ProChain/substrate.git" }
sp-trie = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/ProChain/substrate.git" }
trie-db = { version = "0.16.0", default-features = false }

[dev-dependencies]
sc-executor = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
#substrate-test-runtime-client = { version = "2.0.0", path = "./client" }
sp-state-machine = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }

[build-dependencies]
wasm-builder-runner = { version = "1.0.4", package = "substrate-wasm-builder-runner", git = "https://github.com/ProChain/substrate.git" }

[features]
default = [
	"std",
]
std = [
	"sp-application-crypto/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-block-builder/std",
	"codec/std",
	"frame-executive/std",
	"sp-inherents/std",
	"sp-keyring",
	"log",
	"memory-db/std",
	"sp-offchain/std",
	"sp-core/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime-interface/std",
	"sp-io/std",
	"frame-support/std",
	"sp-version/std",
	"serde",
	"sp-session/std",
	"sp-api/std",
	"sp-runtime/std",
	"pallet-babe/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"sc-client",
	"sp-trie/std",
	"sp-transaction-pool/std",
	"trie-db/std",
]
