[package]
name = "chain-spec-builder"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
build = "build.rs"

[dependencies]
ansi_term = "0.12.1"
sc-keystore = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
node-cli = { path = "../../node/cli" }
sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git",  rev = "6688c3be1ff71803d5963935df7a0d646b2d50d2" }
rand = "0.7.2"
structopt = "=0.3.7"
