[package]
name = "utilities"
version = "0.1.0"
authors = ["eri0x <eri0x@chain.pro>"]
edition = "2018"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false, features = ["derive"] }
integer-sqrt = { version = "0.1.2" }
serde = { version = "1.0.102", optional = true }

# primitives
node-primitives = { version = "2.0.0-alpha.2", path = "../../primitives", default-features = false }
sp-core = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/ProChain/substrate.git", default-features = false }
sp-runtime = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git",default-features = false }
sp-io = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }

# frame dependencies
frame-support = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }
frame-system = { version = "2.0.0-alpha.2", git = "https://github.com/ProChain/substrate.git", default-features = false }

[dev-dependencies]


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
