[package]
name = "substrate-test-runtime-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-block-builder = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
substrate-test-client = { version = "2.0.0", path = "../../../test-utils/client" }
sp-core = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
substrate-test-runtime = { version = "2.0.0", path = "../../runtime" }
sp-runtime = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
sc-client-api = { version = "2.0.0", git = "https://github.com/ProChain/substrate.git" }
sc-client = { version = "0.8", git = "https://github.com/ProChain/substrate.git" }
futures = "0.3.1"
