[package]
name = "substrate-test-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
client-db = { package = "substrate-client-db", git = "https://github.com/ProChain/substrate.git", features = ["test-helpers"] }
consensus = { package = "substrate-consensus-common", git = "https://github.com/ProChain/substrate.git" }
executor = { package = "substrate-executor", git = "https://github.com/ProChain/substrate.git" }
futures = "0.3.1"
hash-db = "0.15.2"
keyring = { package = "substrate-keyring", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
sr-primitives = {  git = "https://github.com/ProChain/substrate.git" }
state_machine = { package = "substrate-state-machine", git = "https://github.com/ProChain/substrate.git" }
