[package]
name = "transaction-factory"
version = "0.0.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
block-builder-api = { package = "substrate-block-builder-runtime-api", git = "https://github.com/ProChain/substrate.git" }
cli = { package = "substrate-cli", git = "https://github.com/ProChain/substrate.git" }
client-api = { package = "substrate-client-api", git = "https://github.com/ProChain/substrate.git" }
client = { package = "substrate-client", git = "https://github.com/ProChain/substrate.git" }
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
consensus_common = { package = "substrate-consensus-common", git = "https://github.com/ProChain/substrate.git" }
log = "0.4.8"
primitives = { package = "substrate-primitives", git = "https://github.com/ProChain/substrate.git" }
sr-api = { git = "https://github.com/ProChain/substrate.git" }
sr-primitives = { git = "https://github.com/ProChain/substrate.git" }
substrate-service = { git = "https://github.com/ProChain/substrate.git" }
sp-blockchain = { git = "https://github.com/ProChain/substrate.git" }

